// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword match snapshot after success of sendPasswordResetEmail 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="forgot_password.screen"
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
        style={
          {
            "height": 72,
            "resizeMode": "contain",
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "#dff0d8",
            "borderColor": "#d6e9c6",
            "marginTop": 15,
            "padding": 10,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="If the account exists, a password reset email will be sent to:"
          id="password_send.link"
          style={
            {
              "color": "#3c763d",
            }
          }
        />
        <Text
          style={
            [
              {
                "color": "#3c763d",
              },
              {
                "fontWeight": "bold",
              },
            ]
          }
        >
          test@test.com
        </Text>
        <InjectIntl(FormattedText)
          defaultMessage="Please check your inbox."
          id="password_send.checkInbox"
          style={
            [
              {
                "color": "#3c763d",
              },
              {
                "paddingTop": 15,
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</ForwardRef>
`;

exports[`ForgotPassword should match snapshot 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="forgot_password.screen"
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
        style={
          {
            "height": 72,
            "resizeMode": "contain",
          }
        }
      />
      <View>
        <InjectIntl(FormattedText)
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            [
              {
                "color": "#777",
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 15,
                "textAlign": "center",
              },
              {
                "paddingTop": 15,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onChangeText={[Function]}
          placeholder="Email"
          placeholderTextColor="rgba(0,0,0,0.5)"
          style={
            {
              "alignSelf": "stretch",
              "borderColor": "gainsboro",
              "borderRadius": 3,
              "borderWidth": 1,
              "color": "#3d3c40",
              "fontSize": 16,
              "height": 45,
              "marginBottom": 5,
              "marginTop": 5,
              "paddingLeft": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderColor": "#2389D7",
              "borderRadius": 3,
              "borderWidth": 1,
              "marginTop": 10,
              "padding": 15,
            }
          }
          disabled={true}
          onPress={[Function]}
        >
          <InjectIntl(FormattedText)
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              [
                {
                  "color": "#2389D7",
                  "fontSize": 17,
                  "textAlign": "center",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</ForwardRef>
`;

exports[`ForgotPassword snapshot for error on failure of email regex 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="forgot_password.screen"
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
        style={
          {
            "height": 72,
            "resizeMode": "contain",
          }
        }
      />
      <Connect(ErrorText)
        error="Please enter a valid email address."
        testID="forgot_password.error.text"
      />
      <View>
        <InjectIntl(FormattedText)
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            [
              {
                "color": "#777",
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 15,
                "textAlign": "center",
              },
              {
                "paddingTop": 15,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onChangeText={[Function]}
          placeholder="Email"
          placeholderTextColor="rgba(0,0,0,0.5)"
          style={
            {
              "alignSelf": "stretch",
              "borderColor": "gainsboro",
              "borderRadius": 3,
              "borderWidth": 1,
              "color": "#3d3c40",
              "fontSize": 16,
              "height": 45,
              "marginBottom": 5,
              "marginTop": 5,
              "paddingLeft": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderColor": "#2389D7",
              "borderRadius": 3,
              "borderWidth": 1,
              "marginTop": 10,
              "padding": 15,
            }
          }
          disabled={false}
          onPress={[Function]}
        >
          <InjectIntl(FormattedText)
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              [
                {
                  "color": "#2389D7",
                  "fontSize": 17,
                  "textAlign": "center",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</ForwardRef>
`;
